data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_430.wast
;; 1. **Test Description**: Create a loop with a block type that specifies an integer return, but include an `unreachable` instruction inside the loop block that should not be hit under normal loop execution.    - **Constraint**: This tests whether implementations correctly handle the block type and implicitly enforced "entry" type expectations within the loop block.    - **Unreachable Code Execution**: The execution should not reach the `unreachable` instruction if the loop and block type checking is correct.

(assert_invalid
  (module
    (func $loop_unreachable_test (result i32)
      (i32.const 0)
      (loop (result i32)
        (i32.const 1)
        (drop)
        unreachable)
      (i32.const 2))
  )
  "type mismatch"
)